assigned value to alt attribute for an img tag

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&family=Satisfy&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&family=Satisfy&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -33,27 +33,27 @@
         <h4>Quick links</h4>
         <div class="place-to-visit">
             <div class="place-to-visit1">
-                <img src="./images/piligrims.jpg" alt="">
+                <img src="./images/piligrims.jpg" alt="Pilgrims visiting Sri Krishna Matt temple in Udupi">
                 <h5>Pilgrims</h5>
                 <p>Udupi is considered to be one of the holiest places for pilgrimage in southern India.<a href="https://udupitourism.com/Pilgrims" target="_blank" style="color: red;">  Read more</a></p>    
             </div>
             <div class="place-to-visit2">
-                <img src="images/adventure.jpg" alt="">
+                <img src="images/adventure.jpg" alt="Adventure scene">
                 <h5>Wildlife/Adventure</h5>
                 <p>Kodachadri hill is lesser known & ideal spot from where one can reach the hill.<a href="https://udupitourism.com/Wildlife-Adventure" target="_blank" style="color: red;">  Read more</a></p>
             </div>
             <div class="place-to-visit3">
-                <img src="images/beach.jpg" alt="">
+                <img src="images/beach.jpg" alt="Beach view">
                 <h5>Beaches</h5>
                 <p>The exotic and gorgeous beaches are best tourist attractions of Udupi as well as for water sports.<a href="https://udupitourism.com/Beaches" target="_blank" style="color: red;">     Read more</a></p>
             </div>
             <div class="place-to-visit4">
-                <img src="images/art.jpg" alt="">
+                <img src="images/art.jpg" alt="Arts and folk traditions">
                 <h5>Arts & Folks</h5>
                 <p>Yakshagana, Kudbi Dance, Tiger Dance, Bhootha Aradhane, Kola are the traditional folks of Udupi.<a href="https://udupitourism.com/arts-culture" target="_blank" style="color: red;">  Read more</a></p>
             </div>
             <div class="place-to-visit5">
-                <img src="images/nearby places.jpg" alt="">
+                <img src="images/nearby places.jpg" alt="Nearby tourist places">
                 <h5>Near by Places</h5>
                 <p>Udupi is surrounded by beautiful tourist spots like Murudeshwar, Gokarna, Yana, Shringeri, Mudbidri Jain temples.<a href="https://udupitourism.com/near_by_places" target="_blank" style="color: red;">  Read more</a></p>
             </div>
@@ -63,13 +63,13 @@
     <div class="main-content2">
         <h4>Welcome to Udupi</h4>
         <div class="welcome">
-            <p style="width: 700px;">Udupi is a land of ethereal beauty, a pilgrimage place due to presence of Sri Krishna Matt, the famous Hindu temple dedicated to Lord Krishna, sandwiched between the verdant mountains of the western ghats on the east and the vast, tranquil Arabian Sea on the west. This new district, carved out of the erstwhile Dakshina Kannada, which was more aptly called "Parashurama Srishti", encapsulates the vast cultural heritage. Udupi is well known for its religious fervour and vividity of diverse cultural heritage.It is best known as the seat of Madhwa renaissance, founded by the sage Madhwacharya, outcome of which are Ashtamathas</p>
-            <img src="images/3.jpg" alt="">
+            <p style="width: 700px;">Udupi is a city in Karnataka, in <span style="font-weight: bold;color: chocolate; ">India</span>, and a land of ethereal beauty, a pilgrimage place due to presence of Sri Krishna Matt, the famous Hindu temple dedicated to Lord Krishna, sandwiched between the verdant mountains of the western ghats on the east and the vast, tranquil Arabian Sea on the west. This new district, carved out of the erstwhile Dakshina Kannada, which was more aptly called "Parashurama Srishti", encapsulates the vast cultural heritage. Udupi is well known for its religious fervour and vividity of diverse cultural heritage.It is best known as the seat of Madhwa renaissance, founded by the sage Madhwacharya, outcome of which are Ashtamathas</p>
+            <img src="images/3.jpg" alt="Welcome to Udupi">
         </div>
     </div>
 
     <div class="card">
-        <img class="avatar" src="images/chaitra.jpg">
+        <img class="avatar" src="images/chaitra.jpg" alt="Guide photo">
         <div >
             <p>Your Guide</p>
             <h4>Explore the vibrant streets and rich history of Udupi with insider tips from me.</h4>
