--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     </div>
 
     <div class="header">
-
+        <button id="prevBtn">Previous</button>
+        <img id="carouselImg" src="" alt="CarouselImage" >
+        <button id="nextBtn">Next</button>
     </div>
 
     <div class="main-content1">
@@ -83,4 +85,5 @@
 
 
 </body>
+<script src="script.js"></script>
 </html>
